[gd_scene load_steps=8 format=3 uid="uid://b5winqyvxxqax"]

[ext_resource type="Texture2D" uid="uid://h5gvoh8ptoon" path="res://assets/sprites/inside_levels/inside_layout_h_7.png" id="1_al81u"]
[ext_resource type="Script" path="res://inside_levels_h/item_scene.gd" id="1_li2ml"]
[ext_resource type="PackedScene" uid="uid://b0hg5omoq654a" path="res://item.tscn" id="2_rsd1j"]
[ext_resource type="PackedScene" uid="uid://5pmdmj5q2obg" path="res://enemy.tscn" id="4_r17w8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udyx0"]
size = Vector2(1020, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ril6"]
size = Vector2(28, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dec2n"]
size = Vector2(64, 476)

[node name="inside_level_h_7" type="Node2D"]
script = ExtResource("1_li2ml")

[node name="InsideLayoutH7" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("1_al81u")

[node name="Area2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(576, 10)
shape = SubResource("RectangleShape2D_udyx0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(576, 638)
shape = SubResource("RectangleShape2D_udyx0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(80, 154)
shape = SubResource("RectangleShape2D_3ril6")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(80, 494)
shape = SubResource("RectangleShape2D_3ril6")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1072, 494)
shape = SubResource("RectangleShape2D_3ril6")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1072, 154)
shape = SubResource("RectangleShape2D_3ril6")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Area2D"]
position = Vector2(738, 254)
shape = SubResource("RectangleShape2D_dec2n")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Area2D"]
position = Vector2(414, 394)
shape = SubResource("RectangleShape2D_dec2n")

[node name="item" parent="." instance=ExtResource("2_rsd1j")]
position = Vector2(577, 342)
scale = Vector2(0.5, 0.5)

[node name="enemy" parent="." instance=ExtResource("4_r17w8")]
position = Vector2(798, 558)
scale = Vector2(0.7, 0.7)

[node name="enemy2" parent="." instance=ExtResource("4_r17w8")]
position = Vector2(219, 565)
scale = Vector2(0.7, 0.7)

[node name="enemy3" parent="." instance=ExtResource("4_r17w8")]
position = Vector2(636, 76)
scale = Vector2(0.7, 0.7)

[connection signal="body_entered" from="item" to="." method="_on_item_body_entered"]
[connection signal="hit" from="enemy" to="." method="_on_enemy_hit"]
[connection signal="hit" from="enemy2" to="." method="_on_enemy_hit"]
[connection signal="hit" from="enemy3" to="." method="_on_enemy_hit"]
